Ampliaciones/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones main

   2  llaves_array : '[' CTE_ENTERA ']'
   3               | '[' CTE_ENTERA ']' llaves_array

   4  array : llaves_array tipo

   5  struct : STRUCT '{' lista_campos '}'

   6  campo : lista_id tipo ';'

   7  lista_campos : lista_campos campo
   8               | campo

   9  tipo : INT
  10       | FLOAT
  11       | CHAR
  12       | array
  13       | struct

  14  tipo_simple : INT
  15              | FLOAT
  16              | CHAR

  17  lista_definiciones : lista_definiciones definicion
  18                     |

  19  lista_def_variables : lista_def_variables def_variable_completa
  20                      |

  21  definicion : def_variable_completa
  22             | def_funcion

  23  def_variable_completa : VAR lista_id tipo ';'

  24  def_variable : ID tipo

  25  lista_id : lista_id ',' ID
  26           | ID

  27  lista_parametro_tipo_funcion : lista_parametro_tipo
  28                               |

  29  lista_parametro_tipo : lista_parametro_tipo ',' def_variable
  30                       | def_variable
  31                       | lista_parametro_tipo ',' REF def_variable
  32                       | REF def_variable

  33  tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple
  34               | '(' lista_parametro_tipo_funcion ')'

  35  main : FUNC main_id '(' ')' '{' lista_def_variables lista_sentencias '}'

  36  main_id : MAIN

  37  def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}'

  38  lista_sentencias : lista_sentencias sentencia
  39                   |

  40  sentencia : RETURN expresion ';'
  41            | READ '(' lista_expresiones ')' ';'
  42            | WRITE '(' lista_expresiones ')' ';'
  43            | if_else
  44            | while
  45            | asignacion ';'
  46            | ID '(' lista_expresiones_llamada_fun ')' ';'
  47            | for
  48            | dowhile

  49  asignacion : expresion '=' expresion
  50             | expresion '+' '+'
  51             | expresion '-' '-'

  52  for : FOR '(' asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'

  53  if_else : IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  54          | IF expresion '{' lista_sentencias '}'
  55          | IF '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  56          | IF '(' expresion ')' '{' lista_sentencias '}'

  57  while : WHILE '(' expresion ')' '{' lista_sentencias '}'
  58        | WHILE expresion '{' lista_sentencias '}'

  59  dowhile : DO '{' lista_sentencias '}' WHILE '(' expresion ')'

  60  lista_expresiones_llamada_fun : lista_expresiones
  61                                |

  62  lista_expresiones : lista_expresiones ',' expresion
  63                    | expresion

  64  expresion : expresion '+' expresion
  65            | expresion '*' expresion
  66            | expresion '/' expresion
  67            | expresion '-' expresion
  68            | expresion '%' expresion
  69            | expresion EQ expresion
  70            | expresion NOT_EQ expresion
  71            | expresion '>' expresion
  72            | expresion '<' expresion
  73            | expresion L_EQ expresion
  74            | expresion G_EQ expresion
  75            | expresion AND expresion
  76            | expresion OR expresion
  77            | expresion XOR expresion
  78            | ID '(' lista_expresiones_llamada_fun ')'
  79            | tipo '(' expresion ')'
  80            | expresion '[' expresion ']'
  81            | expresion '.' ID
  82            | expresion '!' expresion
  83            | '-' expresion
  84            | '(' expresion ')'
  85            | '!' expresion
  86            | ID
  87            | CTE_CHAR
  88            | CTE_REAL
  89            | CTE_ENTERA
  90            | ternario

  91  ternario : '(' expresion ')' '?' expresion ':' expresion

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (18)

	.  reduce 18

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . main  (1)
	lista_definiciones : lista_definiciones . definicion  (17)

	VAR  shift 3
	FUNC  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	def_variable_completa  goto 7
	def_funcion  goto 8


state 3
	def_variable_completa : VAR . lista_id tipo ';'  (23)

	ID  shift 9
	.  error

	lista_id  goto 10


state 4
	main : FUNC . main_id '(' ')' '{' lista_def_variables lista_sentencias '}'  (35)
	def_funcion : FUNC . ID tipo_funcion '{' lista_def_variables lista_sentencias '}'  (37)

	ID  shift 11
	MAIN  shift 12
	.  error

	main_id  goto 13


state 5
	programa : lista_definiciones main .  (1)

	.  reduce 1


state 6
	lista_definiciones : lista_definiciones definicion .  (17)

	.  reduce 17


state 7
	definicion : def_variable_completa .  (21)

	.  reduce 21


state 8
	definicion : def_funcion .  (22)

	.  reduce 22


state 9
	lista_id : ID .  (26)

	.  reduce 26


state 10
	def_variable_completa : VAR lista_id . tipo ';'  (23)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 22
	struct  goto 23


state 11
	def_funcion : FUNC ID . tipo_funcion '{' lista_def_variables lista_sentencias '}'  (37)

	'('  shift 24
	.  error

	tipo_funcion  goto 25


state 12
	main_id : MAIN .  (36)

	.  reduce 36


state 13
	main : FUNC main_id . '(' ')' '{' lista_def_variables lista_sentencias '}'  (35)

	'('  shift 26
	.  error


state 14
	tipo : INT .  (9)

	.  reduce 9


state 15
	tipo : FLOAT .  (10)

	.  reduce 10


state 16
	tipo : CHAR .  (11)

	.  reduce 11


state 17
	struct : STRUCT . '{' lista_campos '}'  (5)

	'{'  shift 27
	.  error


state 18
	llaves_array : '[' . CTE_ENTERA ']'  (2)
	llaves_array : '[' . CTE_ENTERA ']' llaves_array  (3)

	CTE_ENTERA  shift 28
	.  error


state 19
	lista_id : lista_id ',' . ID  (25)

	ID  shift 29
	.  error


state 20
	array : llaves_array . tipo  (4)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 30
	struct  goto 23


state 21
	tipo : array .  (12)

	.  reduce 12


state 22
	def_variable_completa : VAR lista_id tipo . ';'  (23)

	';'  shift 31
	.  error


state 23
	tipo : struct .  (13)

	.  reduce 13


state 24
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')' tipo_simple  (33)
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')'  (34)
	lista_parametro_tipo_funcion : .  (28)

	ID  shift 32
	REF  shift 33
	')'  reduce 28

	def_variable  goto 34
	lista_parametro_tipo_funcion  goto 35
	lista_parametro_tipo  goto 36


state 25
	def_funcion : FUNC ID tipo_funcion . '{' lista_def_variables lista_sentencias '}'  (37)

	'{'  shift 37
	.  error


state 26
	main : FUNC main_id '(' . ')' '{' lista_def_variables lista_sentencias '}'  (35)

	')'  shift 38
	.  error


state 27
	struct : STRUCT '{' . lista_campos '}'  (5)

	ID  shift 9
	.  error

	lista_campos  goto 39
	campo  goto 40
	lista_id  goto 41


state 28
	llaves_array : '[' CTE_ENTERA . ']'  (2)
	llaves_array : '[' CTE_ENTERA . ']' llaves_array  (3)

	']'  shift 42
	.  error


state 29
	lista_id : lista_id ',' ID .  (25)

	.  reduce 25


state 30
	array : llaves_array tipo .  (4)

	.  reduce 4


state 31
	def_variable_completa : VAR lista_id tipo ';' .  (23)

	.  reduce 23


state 32
	def_variable : ID . tipo  (24)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 43
	struct  goto 23


state 33
	lista_parametro_tipo : REF . def_variable  (32)

	ID  shift 32
	.  error

	def_variable  goto 44


state 34
	lista_parametro_tipo : def_variable .  (30)

	.  reduce 30


state 35
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')' tipo_simple  (33)
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')'  (34)

	')'  shift 45
	.  error


state 36
	lista_parametro_tipo_funcion : lista_parametro_tipo .  (27)
	lista_parametro_tipo : lista_parametro_tipo . ',' def_variable  (29)
	lista_parametro_tipo : lista_parametro_tipo . ',' REF def_variable  (31)

	','  shift 46
	')'  reduce 27


state 37
	def_funcion : FUNC ID tipo_funcion '{' . lista_def_variables lista_sentencias '}'  (37)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 47


state 38
	main : FUNC main_id '(' ')' . '{' lista_def_variables lista_sentencias '}'  (35)

	'{'  shift 48
	.  error


state 39
	struct : STRUCT '{' lista_campos . '}'  (5)
	lista_campos : lista_campos . campo  (7)

	ID  shift 9
	'}'  shift 49
	.  error

	campo  goto 50
	lista_id  goto 41


state 40
	lista_campos : campo .  (8)

	.  reduce 8


state 41
	campo : lista_id . tipo ';'  (6)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 51
	struct  goto 23


state 42
	llaves_array : '[' CTE_ENTERA ']' .  (2)
	llaves_array : '[' CTE_ENTERA ']' . llaves_array  (3)

	.  reduce 2

	llaves_array  goto 52


state 43
	def_variable : ID tipo .  (24)

	.  reduce 24


state 44
	lista_parametro_tipo : REF def_variable .  (32)

	.  reduce 32


state 45
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' . tipo_simple  (33)
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' .  (34)

	INT  shift 53
	FLOAT  shift 54
	CHAR  shift 55
	'{'  reduce 34

	tipo_simple  goto 56


state 46
	lista_parametro_tipo : lista_parametro_tipo ',' . def_variable  (29)
	lista_parametro_tipo : lista_parametro_tipo ',' . REF def_variable  (31)

	ID  shift 32
	REF  shift 57
	.  error

	def_variable  goto 58


state 47
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables . lista_sentencias '}'  (37)
	lista_sentencias : .  (39)

	VAR  shift 3
	CTE_ENTERA  reduce 39
	CTE_CHAR  reduce 39
	CTE_REAL  reduce 39
	ID  reduce 39
	READ  reduce 39
	WRITE  reduce 39
	WHILE  reduce 39
	IF  reduce 39
	INT  reduce 39
	FLOAT  reduce 39
	CHAR  reduce 39
	STRUCT  reduce 39
	RETURN  reduce 39
	FOR  reduce 39
	DO  reduce 39
	'-'  reduce 39
	'!'  reduce 39
	'['  reduce 39
	'}'  reduce 39
	'('  reduce 39

	def_variable_completa  goto 59
	lista_sentencias  goto 60


state 48
	main : FUNC main_id '(' ')' '{' . lista_def_variables lista_sentencias '}'  (35)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 61


state 49
	struct : STRUCT '{' lista_campos '}' .  (5)

	.  reduce 5


state 50
	lista_campos : lista_campos campo .  (7)

	.  reduce 7


state 51
	campo : lista_id tipo . ';'  (6)

	';'  shift 62
	.  error


state 52
	llaves_array : '[' CTE_ENTERA ']' llaves_array .  (3)

	.  reduce 3


state 53
	tipo_simple : INT .  (14)

	.  reduce 14


state 54
	tipo_simple : FLOAT .  (15)

	.  reduce 15


state 55
	tipo_simple : CHAR .  (16)

	.  reduce 16


state 56
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple .  (33)

	.  reduce 33


state 57
	lista_parametro_tipo : lista_parametro_tipo ',' REF . def_variable  (31)

	ID  shift 32
	.  error

	def_variable  goto 63


state 58
	lista_parametro_tipo : lista_parametro_tipo ',' def_variable .  (29)

	.  reduce 29


state 59
	lista_def_variables : lista_def_variables def_variable_completa .  (19)

	.  reduce 19


state 60
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias . '}'  (37)
	lista_sentencias : lista_sentencias . sentencia  (38)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 67
	READ  shift 68
	WRITE  shift 69
	WHILE  shift 70
	IF  shift 71
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	RETURN  shift 72
	FOR  shift 73
	DO  shift 74
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'}'  shift 77
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	sentencia  goto 80
	expresion  goto 81
	if_else  goto 82
	while  goto 83
	asignacion  goto 84
	for  goto 85
	dowhile  goto 86
	ternario  goto 87


state 61
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	main : FUNC main_id '(' ')' '{' lista_def_variables . lista_sentencias '}'  (35)
	lista_sentencias : .  (39)

	VAR  shift 3
	CTE_ENTERA  reduce 39
	CTE_CHAR  reduce 39
	CTE_REAL  reduce 39
	ID  reduce 39
	READ  reduce 39
	WRITE  reduce 39
	WHILE  reduce 39
	IF  reduce 39
	INT  reduce 39
	FLOAT  reduce 39
	CHAR  reduce 39
	STRUCT  reduce 39
	RETURN  reduce 39
	FOR  reduce 39
	DO  reduce 39
	'-'  reduce 39
	'!'  reduce 39
	'['  reduce 39
	'}'  reduce 39
	'('  reduce 39

	def_variable_completa  goto 59
	lista_sentencias  goto 88


state 62
	campo : lista_id tipo ';' .  (6)

	.  reduce 6


state 63
	lista_parametro_tipo : lista_parametro_tipo ',' REF def_variable .  (31)

	.  reduce 31


state 64
	expresion : CTE_ENTERA .  (89)

	.  reduce 89


state 65
	expresion : CTE_CHAR .  (87)

	.  reduce 87


state 66
	expresion : CTE_REAL .  (88)

	.  reduce 88


state 67
	sentencia : ID . '(' lista_expresiones_llamada_fun ')' ';'  (46)
	expresion : ID . '(' lista_expresiones_llamada_fun ')'  (78)
	expresion : ID .  (86)

	'('  shift 89
	NOT_EQ  reduce 86
	AND  reduce 86
	OR  reduce 86
	EQ  reduce 86
	L_EQ  reduce 86
	G_EQ  reduce 86
	XOR  reduce 86
	'='  reduce 86
	'>'  reduce 86
	'<'  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86
	'%'  reduce 86
	'!'  reduce 86
	'['  reduce 86
	'.'  reduce 86


state 68
	sentencia : READ . '(' lista_expresiones ')' ';'  (41)

	'('  shift 90
	.  error


state 69
	sentencia : WRITE . '(' lista_expresiones ')' ';'  (42)

	'('  shift 91
	.  error


state 70
	while : WHILE . '(' expresion ')' '{' lista_sentencias '}'  (57)
	while : WHILE . expresion '{' lista_sentencias '}'  (58)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 93
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 94
	ternario  goto 87


state 71
	if_else : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (53)
	if_else : IF . expresion '{' lista_sentencias '}'  (54)
	if_else : IF . '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (55)
	if_else : IF . '(' expresion ')' '{' lista_sentencias '}'  (56)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 95
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 96
	ternario  goto 87


state 72
	sentencia : RETURN . expresion ';'  (40)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 97
	ternario  goto 87


state 73
	for : FOR . '(' asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'  (52)

	'('  shift 98
	.  error


state 74
	dowhile : DO . '{' lista_sentencias '}' WHILE '(' expresion ')'  (59)

	'{'  shift 99
	.  error


state 75
	expresion : '-' . expresion  (83)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 100
	ternario  goto 87


state 76
	expresion : '!' . expresion  (85)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 101
	ternario  goto 87


state 77
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}' .  (37)

	.  reduce 37


state 78
	expresion : '(' . expresion ')'  (84)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (91)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 102
	ternario  goto 87


state 79
	expresion : tipo . '(' expresion ')'  (79)

	'('  shift 103
	.  error


state 80
	lista_sentencias : lista_sentencias sentencia .  (38)

	.  reduce 38


state 81
	asignacion : expresion . '=' expresion  (49)
	asignacion : expresion . '+' '+'  (50)
	asignacion : expresion . '-' '-'  (51)
	expresion : expresion . '+' expresion  (64)
	expresion : expresion . '*' expresion  (65)
	expresion : expresion . '/' expresion  (66)
	expresion : expresion . '-' expresion  (67)
	expresion : expresion . '%' expresion  (68)
	expresion : expresion . EQ expresion  (69)
	expresion : expresion . NOT_EQ expresion  (70)
	expresion : expresion . '>' expresion  (71)
	expresion : expresion . '<' expresion  (72)
	expresion : expresion . L_EQ expresion  (73)
	expresion : expresion . G_EQ expresion  (74)
	expresion : expresion . AND expresion  (75)
	expresion : expresion . OR expresion  (76)
	expresion : expresion . XOR expresion  (77)
	expresion : expresion . '[' expresion ']'  (80)
	expresion : expresion . '.' ID  (81)
	expresion : expresion . '!' expresion  (82)

	NOT_EQ  shift 104
	AND  shift 105
	OR  shift 106
	EQ  shift 107
	L_EQ  shift 108
	G_EQ  shift 109
	XOR  shift 110
	'='  shift 111
	'>'  shift 112
	'<'  shift 113
	'+'  shift 114
	'-'  shift 115
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'!'  shift 119
	'['  shift 120
	'.'  shift 121
	.  error


state 82
	sentencia : if_else .  (43)

	.  reduce 43


state 83
	sentencia : while .  (44)

	.  reduce 44


state 84
	sentencia : asignacion . ';'  (45)

	';'  shift 122
	.  error


state 85
	sentencia : for .  (47)

	.  reduce 47


state 86
	sentencia : dowhile .  (48)

	.  reduce 48


state 87
	expresion : ternario .  (90)

	.  reduce 90


state 88
	main : FUNC main_id '(' ')' '{' lista_def_variables lista_sentencias . '}'  (35)
	lista_sentencias : lista_sentencias . sentencia  (38)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 67
	READ  shift 68
	WRITE  shift 69
	WHILE  shift 70
	IF  shift 71
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	RETURN  shift 72
	FOR  shift 73
	DO  shift 74
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'}'  shift 123
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	sentencia  goto 80
	expresion  goto 81
	if_else  goto 82
	while  goto 83
	asignacion  goto 84
	for  goto 85
	dowhile  goto 86
	ternario  goto 87


state 89
	sentencia : ID '(' . lista_expresiones_llamada_fun ')' ';'  (46)
	expresion : ID '(' . lista_expresiones_llamada_fun ')'  (78)
	lista_expresiones_llamada_fun : .  (61)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	')'  reduce 61

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 124
	lista_expresiones  goto 125
	lista_expresiones_llamada_fun  goto 126
	ternario  goto 87


state 90
	sentencia : READ '(' . lista_expresiones ')' ';'  (41)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 124
	lista_expresiones  goto 127
	ternario  goto 87


state 91
	sentencia : WRITE '(' . lista_expresiones ')' ';'  (42)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 124
	lista_expresiones  goto 128
	ternario  goto 87


state 92
	expresion : ID . '(' lista_expresiones_llamada_fun ')'  (78)
	expresion : ID .  (86)

	'('  shift 129
	NOT_EQ  reduce 86
	AND  reduce 86
	OR  reduce 86
	EQ  reduce 86
	L_EQ  reduce 86
	G_EQ  reduce 86
	XOR  reduce 86
	'='  reduce 86
	'>'  reduce 86
	'<'  reduce 86
	'+'  reduce 86
	'-'  reduce 86
	'*'  reduce 86
	'/'  reduce 86
	'%'  reduce 86
	'!'  reduce 86
	'['  reduce 86
	']'  reduce 86
	'{'  reduce 86
	':'  reduce 86
	'.'  reduce 86
	')'  reduce 86
	';'  reduce 86
	','  reduce 86


state 93
	while : WHILE '(' . expresion ')' '{' lista_sentencias '}'  (57)
	expresion : '(' . expresion ')'  (84)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (91)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 130
	ternario  goto 87


state 94
	while : WHILE expresion . '{' lista_sentencias '}'  (58)
	expresion : expresion . '+' expresion  (64)
	expresion : expresion . '*' expresion  (65)
	expresion : expresion . '/' expresion  (66)
	expresion : expresion . '-' expresion  (67)
	expresion : expresion . '%' expresion  (68)
	expresion : expresion . EQ expresion  (69)
	expresion : expresion . NOT_EQ expresion  (70)
	expresion : expresion . '>' expresion  (71)
	expresion : expresion . '<' expresion  (72)
	expresion : expresion . L_EQ expresion  (73)
	expresion : expresion . G_EQ expresion  (74)
	expresion : expresion . AND expresion  (75)
	expresion : expresion . OR expresion  (76)
	expresion : expresion . XOR expresion  (77)
	expresion : expresion . '[' expresion ']'  (80)
	expresion : expresion . '.' ID  (81)
	expresion : expresion . '!' expresion  (82)

	NOT_EQ  shift 104
	AND  shift 105
	OR  shift 106
	EQ  shift 107
	L_EQ  shift 108
	G_EQ  shift 109
	XOR  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 131
	'-'  shift 132
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'!'  shift 119
	'['  shift 120
	'{'  shift 133
	'.'  shift 121
	.  error


state 95
	if_else : IF '(' . expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (55)
	if_else : IF '(' . expresion ')' '{' lista_sentencias '}'  (56)
	expresion : '(' . expresion ')'  (84)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (91)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 134
	ternario  goto 87


state 96
	if_else : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (53)
	if_else : IF expresion . '{' lista_sentencias '}'  (54)
	expresion : expresion . '+' expresion  (64)
	expresion : expresion . '*' expresion  (65)
	expresion : expresion . '/' expresion  (66)
	expresion : expresion . '-' expresion  (67)
	expresion : expresion . '%' expresion  (68)
	expresion : expresion . EQ expresion  (69)
	expresion : expresion . NOT_EQ expresion  (70)
	expresion : expresion . '>' expresion  (71)
	expresion : expresion . '<' expresion  (72)
	expresion : expresion . L_EQ expresion  (73)
	expresion : expresion . G_EQ expresion  (74)
	expresion : expresion . AND expresion  (75)
	expresion : expresion . OR expresion  (76)
	expresion : expresion . XOR expresion  (77)
	expresion : expresion . '[' expresion ']'  (80)
	expresion : expresion . '.' ID  (81)
	expresion : expresion . '!' expresion  (82)

	NOT_EQ  shift 104
	AND  shift 105
	OR  shift 106
	EQ  shift 107
	L_EQ  shift 108
	G_EQ  shift 109
	XOR  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 131
	'-'  shift 132
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'!'  shift 119
	'['  shift 120
	'{'  shift 135
	'.'  shift 121
	.  error


state 97
	sentencia : RETURN expresion . ';'  (40)
	expresion : expresion . '+' expresion  (64)
	expresion : expresion . '*' expresion  (65)
	expresion : expresion . '/' expresion  (66)
	expresion : expresion . '-' expresion  (67)
	expresion : expresion . '%' expresion  (68)
	expresion : expresion . EQ expresion  (69)
	expresion : expresion . NOT_EQ expresion  (70)
	expresion : expresion . '>' expresion  (71)
	expresion : expresion . '<' expresion  (72)
	expresion : expresion . L_EQ expresion  (73)
	expresion : expresion . G_EQ expresion  (74)
	expresion : expresion . AND expresion  (75)
	expresion : expresion . OR expresion  (76)
	expresion : expresion . XOR expresion  (77)
	expresion : expresion . '[' expresion ']'  (80)
	expresion : expresion . '.' ID  (81)
	expresion : expresion . '!' expresion  (82)

	NOT_EQ  shift 104
	AND  shift 105
	OR  shift 106
	EQ  shift 107
	L_EQ  shift 108
	G_EQ  shift 109
	XOR  shift 110
	'>'  shift 112
	'<'  shift 113
	'+'  shift 131
	'-'  shift 132
	'*'  shift 116
	'/'  shift 117
	'%'  shift 118
	'!'  shift 119
	'['  shift 120
	'.'  shift 121
	';'  shift 136
	.  error


state 98
	for : FOR '(' . asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'  (52)

	CTE_ENTERA  shift 64
	CTE_CHAR  shift 65
	CTE_REAL  shift 66
	ID  shift 92
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 75
	'!'  shift 76
	'['  shift 18
	'('  shift 78
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 79
	struct  goto 23
	expresion  goto 81
	asignacion  goto 137
	ternario  goto 87


state 99
	dowhile : DO '{' . lista_sentencias '}' WHILE '(' expresion ')'  (59)
	lista_sentencias : .  (39)

	.  reduce 39

	lista_sentencias  goto 138


state 100
	expresion : expresion . '+' expresion  (64)
	expresion : expresion . '*' expresion  (65)
	expresion : expresion . '/' expresion  (66)
	expresion : expresion . '-' expresion  (67)
	expresion : expresion . '%' expresion  (68)
	expresion : expresion . EQ expresion  (69)
	expresion : expresion . NOT_EQ expresion  (70)
	expresion : expresion . '>' expresion  (71)
	expresion : expresion . '<' expresion  (72)
	expresion : expresion . L_EQ expresion  (73)
	expresion : expresion . G_EQ expresion  (74)
	expresion : expresion . AND expresion  (75)
	expresion : expresion . OR expresion  (76)
	expresion : expresion . XOR expresion  (77)
	expresion : expresion . '[' expresion ']'  (80)
	expresion : expresion . '.' ID  (81)
	expresion : expresion . '!' expresion  (82)
	expresion : '-' expresion .  (83)
